--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^10.4.15",
     "@nestjs/core": "^10.4.15",
     "@nestjs/graphql": "^12.2.2",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.4.15",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
