--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@graphql-codegen/typescript-operations": "^4.4.1",
     "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.9.0",
+    "maska": "^3.1.1",
     "nuxt": "^3.15.3",
     "pinia": "^2.3.1",
     "sass": "^1.83.4",
