--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
+    "start": "node .output/server/index.mjs",
     "dev": "nuxt dev",
     "debug": "nuxt dev --inspect=9230",
     "generate": "nuxt generate",
