--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "NODE_ENV=production npx prisma generate && npx prisma migrate deploy && node dist/src/main",
-    "start:staging": "NODE_ENV=staging npx prisma db push && npx prisma db seed && node dist/src/main",
+    "start": "NODE_ENV=production node dist/src/main",
+    "start:staging": "NODE_ENV=staging node dist/src/main",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
