--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -1,9 +1,11 @@
 overwrite: true
-schema: "http://localhost:3001/graphql"
-documents: "api/queries/*.gql"
+schema: 'http://localhost:3001/graphql'
+documents: 'api/queries/*.gql'
 generates:
   api/generated/types.ts:
     plugins:
       - typescript
       - typescript-operations
       - typed-document-node
+    config:
+      useTypeImports: true
