--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,6 @@
     "@graphql-codegen/typed-document-node": "^5.0.13",
     "@graphql-codegen/typescript": "^4.1.3",
     "@graphql-codegen/typescript-operations": "^4.4.1",
-    "@mdi/font": "^7.4.47",
     "@pinia/nuxt": "^0.9.0",
     "maska": "^3.1.1",
     "nuxt": "^3.15.3",
@@ -29,6 +28,7 @@
     "vuetify": "^3.7.14"
   },
   "devDependencies": {
+    "@mdi/js": "^7.4.47",
     "vite-plugin-vuetify": "^2.0.4"
   }
 }
