--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@graphql-codegen/typed-document-node": "^5.0.13",
     "@graphql-codegen/typescript": "^4.1.3",
     "@graphql-codegen/typescript-operations": "^4.4.1",
+    "@nuxtjs/i18n": "^9.5.4",
     "@pinia/nuxt": "^0.9.0",
     "maska": "^3.1.1",
     "nuxt": "^3.15.3",
