--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,3 +1,6 @@
 PORT=3001
 DATABASE_URL=postgresql://postgres:KataKunci2025@localhost:5432/workflow_web
 JWT=randomsecurestring
+CORS_ORIGIN_1=http://localhost:3000
+CORS_ORIGIN_2=http://127.0.0.1:3000
+CORS_ORIGIN_3=http://192.168.100.10
