--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@date-io/dayjs": "^3.2.0",
     "@graphql-codegen/cli": "^5.0.4",
     "@graphql-codegen/typed-document-node": "^5.0.13",
     "@graphql-codegen/typescript": "^4.1.3",
     "@graphql-codegen/typescript-operations": "^4.4.1",
     "@nuxtjs/i18n": "^9.5.4",
     "@pinia/nuxt": "^0.9.0",
+    "dayjs": "^1.11.13",
     "maska": "^3.1.1",
     "nuxt": "^3.15.3",
     "pinia": "^2.3.1",
