--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@graphql-codegen/typescript-operations": "^4.4.1",
     "@nuxtjs/i18n": "^9.5.4",
     "@pinia/nuxt": "^0.9.0",
+    "@vee-validate/nuxt": "^4.15.0",
+    "@vee-validate/zod": "^4.15.0",
     "dayjs": "^1.11.13",
     "maska": "^3.1.1",
     "nuxt": "^3.15.3",
@@ -28,7 +30,8 @@
     "villus": "^3.5.2",
     "vue": "latest",
     "vue-router": "latest",
-    "vuetify": "^3.7.14"
+    "vuetify": "^3.7.14",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@mdi/js": "^7.4.47",
