--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "dayjs": "^1.11.13",
     "maska": "^3.1.1",
     "nuxt": "^3.15.3",
+    "nuxt-zod-i18n": "^1.11.5",
     "pinia": "^2.3.1",
     "sass": "^1.83.4",
     "villus": "^3.5.2",
