--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build --dotenv .env.staging",
+    "build:staging": "nuxt build --dotenv .env.staging",
+    "build": "nuxt build",
     "start": "node .output/server/index.mjs",
     "dev": "nuxt dev --dotenv .env.development",
     "debug": "nuxt dev --inspect=9230 --dotenv .env.development",
