--- a/backend/.env.production
+++ b/backend/.env.production
@@ -1,6 +1,2 @@
-PORT=3001
-DATABASE_URL=postgresql://michael:KataKunci2025@postgres:5432/workflow_web
 JWT=randomsecurestring
-CORS_ORIGIN_1=http://localhost:3000
-CORS_ORIGIN_2=http://127.0.0.1:3000
-CORS_ORIGIN_3=http://192.168.100.10
+CORS_ORIGIN=http://108.137.77.125
