--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -27,20 +27,21 @@ services:
       - 3005:3000
     networks:
       - workflow-network
-    #fix nitro worker eaddrinuse
-    # tmpfs:
-    #   - /tmp
   nginx:
     image: nginx:1.27.4-alpine
     container_name: nginx
     volumes:
       - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/snippets:/etc/nginx/snippets
+      - ./nginx/ssl/certs/nginx-selfsigned.crt:/etc/ssl/certs/nginx-selfsigned.crt
+      - ./nginx/ssl/certs/dhparam.pem:/etc/ssl/certs/dhparam.pem
+      - ./nginx/ssl/private/nginx-selfsigned.key:/etc/ssl/private/nginx-selfsigned.key
     depends_on:
       - frontend
     networks:
       - workflow-network
     ports:
-      - 80:80
+      - 443:443
     restart: unless-stopped
   postgres:
     image: postgres:15.12-alpine
