--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,42 +7,57 @@ upstream frontend {
 }
 
 map $sent_http_content_type $expires {
-   "text/html"                 epoch;
-   "text/html; charset=utf-8"  epoch;
-   default                     off;
+  "text/html"                 epoch;
+  "text/html; charset=utf-8"  epoch;
+  default                     off;
 }
 
 server {
-   listen          80;              # the port nginx is listening on
-   server_name     127.0.0.1;       # setup your domain here
+  listen                         443 ssl;
+  listen                         [::]:443 ssl;
+  server_name                    192.168.100.21;           
+  include                        snippets/self-signed.conf;
+  include                        snippets/ssl-params.conf;
 
-   gzip            on;
-   gzip_types      text/plain application/xml text/css application/javascript;
-   gzip_min_length 1000;
+  gzip                           on;
+  gzip_types                     text/plain application/xml text/css application/javascript;
+  gzip_min_length                1000;
 
-   location /api  {
-       expires $expires;
+  location /api {
+    expires                      $expires;
 
-       proxy_redirect                       off;
-       proxy_set_header Host                $host;
-       proxy_set_header X-Real-IP           $remote_addr;
-       proxy_set_header X-Forwarded-For     $proxy_add_x_forwarded_for;
-       proxy_set_header X-Forwarded-Proto   $scheme;
-       proxy_read_timeout                   1m;
-       proxy_connect_timeout                1m;
-       proxy_pass                           http://backend/graphql;
-   }
+    proxy_redirect               off;
+    proxy_set_header             Host $host;
+    proxy_set_header             X-Real-IP $remote_addr;
+    proxy_set_header             X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header             X-Forwarded-Proto $scheme;
+    proxy_read_timeout           1m;
+    proxy_connect_timeout        1m;
+    proxy_pass                   http://backend/graphql;
+  }
 
-   location / {
-       expires $expires;
+  location / {
+    expires                      $expires;
 
-       proxy_redirect                       off;
-       proxy_set_header Host                $host;
-       proxy_set_header X-Real-IP           $remote_addr;
-       proxy_set_header X-Forwarded-For     $proxy_add_x_forwarded_for;
-       proxy_set_header X-Forwarded-Proto   $scheme;
-       proxy_read_timeout                   1m;
-       proxy_connect_timeout                1m;
-       proxy_pass                           http://frontend; 
-   }
+    proxy_redirect               off;
+    proxy_set_header             Host $host;
+    proxy_set_header             X-Real-IP $remote_addr;
+    proxy_set_header             X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header             X-Forwarded-Proto $scheme;
+    proxy_read_timeout           1m;
+    proxy_connect_timeout        1m;
+    proxy_pass                   http://frontend;
+  }
+}
+
+server {
+  listen                         80;
+  listen                         [::]:80;
+
+  server_name                    192.168.100.21;
+  server_tokens                  off;
+
+  location / {
+    return 301                   https://$host$request_uri;
+  }
 }
