--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -13,11 +13,13 @@ map $sent_http_content_type $expires {
 }
 
 server {
-  listen                         443 ssl;
-  listen                         [::]:443 ssl;
+  # listen                         443 ssl;
+  # listen                         [::]:443 ssl;
+  listen                         80;
+  listen                         [::]:80;
   server_name                    108.137.77.125;           
-  include                        snippets/self-signed.conf;
-  include                        snippets/ssl-params.conf;
+  # include                        snippets/self-signed.conf;
+  # include                        snippets/ssl-params.conf;
 
   gzip                           on;
   gzip_types                     text/plain application/xml text/css application/javascript;
@@ -50,14 +52,14 @@ server {
   }
 }
 
-server {
-  listen                         80;
-  listen                         [::]:80;
+# server {
+#   listen                         80;
+#   listen                         [::]:80;
 
-  server_name                    108.137.77.125;
-  server_tokens                  off;
+#   server_name                    108.137.77.125;
+#   server_tokens                  off;
 
-  location / {
-    return 301                   https://$host$request_uri;
-  }
-}
+#   location / {
+#     return 301                   https://$host$request_uri;
+#   }
+# }
