--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@vee-validate/nuxt": "^4.15.0",
     "@vee-validate/zod": "^4.15.0",
     "dayjs": "^1.11.13",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "maska": "^3.1.1",
     "nuxt": "^3.15.3",
     "nuxt-zod-i18n": "^1.11.5",
