Setup for production SSL

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -13,13 +13,11 @@ map $sent_http_content_type $expires {
 }
 
 server {
-  # listen                         443 ssl;
-  # listen                         [::]:443 ssl;
-  listen                         80;
-  listen                         [::]:80;
-  server_name                    108.137.77.125;           
-  # include                        snippets/self-signed.conf;
-  # include                        snippets/ssl-params.conf;
+  listen                         443 ssl;
+  listen                         [::]:443 ssl;
+  server_name                    app.borsa.co.id;           
+  include                        snippets/ssl-cert.conf;
+  include                        snippets/ssl-params.conf;
 
   gzip                           on;
   gzip_types                     text/plain application/xml text/css application/javascript;
@@ -52,14 +50,17 @@ server {
   }
 }
 
-# server {
-#   listen                         80;
-#   listen                         [::]:80;
+server {
+  listen                         80;
+  listen                         [::]:80;
 
-#   server_name                    108.137.77.125;
-#   server_tokens                  off;
+  server_name                    app.borsa.co.id;
+  server_tokens                  off;
 
-#   location / {
-#     return 301                   https://$host$request_uri;
-#   }
-# }
+  location /.well-known/acme-challenge/ {
+    root /var/www/certbot;
+  }
+  location / {
+    return 301                   https://$host$request_uri;
+  }
+}
