--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
       context: ./backend
       target: production
     image: mikerutenshi/workflow-backend:latest
+    platform: linux/arm64
     container_name: backend
     restart: always
     environment:
@@ -19,6 +20,7 @@ services:
       context: .
       dockerfile: frontend/Dockerfile
     image: mikerutenshi/workflow-frontend:latest
+    platform: linux/arm64
     container_name: frontend
     restart: always
     depends_on:
@@ -29,13 +31,14 @@ services:
       - workflow-network
   nginx:
     image: nginx:1.27.4-alpine
+    platform: linux/arm64
     container_name: nginx
     volumes:
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/snippets:/etc/nginx/snippets
-      - ./nginx/ssl/certs/nginx-selfsigned.crt:/etc/ssl/certs/nginx-selfsigned.crt
       - ./nginx/ssl/certs/dhparam.pem:/etc/ssl/certs/dhparam.pem
-      - ./nginx/ssl/private/nginx-selfsigned.key:/etc/ssl/private/nginx-selfsigned.key
+      - ./certbot/www:/var/www/certbot:ro
+      - ./certbot/conf:/etc/letsencrypt:ro
     depends_on:
       - frontend
     networks:
@@ -46,6 +49,7 @@ services:
     restart: unless-stopped
   postgres:
     image: postgres:15.12-alpine
+    platform: linux/arm64
     container_name: postgres
     networks:
       - workflow-network
@@ -55,6 +59,15 @@ services:
       POSTGRES_DATABASE: ${POSTGRES_DATABASE}
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  certbot:
+    image: certbot/certbot:v4.0.0
+    container_name: certbot
+    platform: linux/arm64
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
+    # entrypoint: /bin/sh
+    # command: -c "trap exit TERM; while :; do sleep 1; done"
 
 volumes:
   postgres-data:
